Fixed yjsg-form radios alignment

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -214,7 +214,6 @@ input[type="checkbox"] {
 input[type=radio],
 input[type=checkbox] {
 	display:inline-block;
-	margin-top:0;
 	line-height: normal;
 	vertical-align: middle;
 }
@@ -259,7 +258,12 @@ input[type="checkbox"],
 }
 .yjsg-form-group-inline input[type="radio"],
 .yjsg-form-group-inline input[type="checkbox"] {
+	position:static;
 	display:inline-block;
+	float:none;
+	margin-top:0px;
+	margin-left:0;
+	margin-right:5px;
 }
 .yjsg-form-group > label {
 	display:block;
@@ -271,6 +275,7 @@ input[type="checkbox"],
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-right:15px;
+	padding-left:0;
 	
 }
 .yjsg-edit-form .yjsg-form-group-inline label{
